[tool.poetry]
name = "privacy-by-design-semseg"
version = "0.1.0"
description = "Semantic segmentation experiments with Pytorch"
authors = ["Marcela <marcela.carvalho@upciti.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
