[tool.poetry]
name = "privacy-by-design-semseg"
version = "0.1.0"
description = "Semantic segmentation experiments with Pytorch"
authors = ["Marcela <marcela.carvalho@upciti.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.0"
imgaug = "^0.4.0"
visdom = "^0.1.8"
sklearn = "^0.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipdb = "^0.13.9"
poethepoet = "^0.16.0"

[tool.poe.tasks]
poe-torch-cuda11 = "python3 -m pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu116"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
